# electronic-homecenter-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake/: parameters.example.txt
src/: DatabaseParameters.h  HomecenterApplication.h
src/action/: AbstractPacketAction.h  IdentifierRequestAction.h  ReceiverAction.h  ReceiverActionManager.h  SavePacketAction.h
src/action/packet/: DateTimeResponseAction.h  IdentifierAssignAction.h
src/entity/: PacketForward.h  PacketQueue.h
src/entity-/: Sensor.h
src/memory/: RTimedProperty.h
src/object/: IdentifierVector.h  SingleResult.h
src/repository/: SensorRepository.h
src/service/: AbstractRepository.h  DatabaseManager.h  QueueService.h  Receiver.h  ReceiverActionManager.h  RepositoryContainer.h
src/service/converter/: PacketConverter.h
src/service/manager/: IdentifierManager.h
src/service/repository/: PacketForwardRepository.h  PacketQueueRepository.h  SensorRepository.h
